programs/examples/type_errors/~add_wrong_output.hssa
// EXPECT welltyped=false

rel stack_peek:
0, 0 := begin <-        
0, 0 :=  ~add 1  =:  0  
         -> end  =: 0, 0
